--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: objective-c
 osx_image: xcode7.2.1
 
 script:
-    - xcodebuild -project XCKnifeExemplar.xcodeproj -configuration Debug -scheme XCKnifeExemplar -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad Air,OS=9.2" test
+    - xcrun simctl list
+    - xcodebuild -project XCKnifeExemplar.xcodeproj -configuration Debug -scheme XCKnifeExemplar -sdk iphonesimulator -destination "platform=iOS Simulator" test
