--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
-osx_image: xcode7.2.1
+osx_image: xcode7.2
 
 script:
     - xcrun simctl list
-    - xcodebuild -project XCKnifeExemplar.xcodeproj -configuration Debug -scheme XCKnifeExemplar -sdk iphonesimulator -destination "platform=iOS Simulator" test
+    - xcodebuild -project XCKnifeExemplar.xcodeproj -configuration Debug -scheme XCKnifeExemplar -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad Air,OS=9.2" test
