--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
-language: ruby
-sudo: false
-before_install: gem install bundler
-bundler_args: --without development
+language: objective-c
+sudo: true
+matrix:
+  include:
+      - os: osx
+        osx_image: xcode8
 
-rvm:
-  - 2.2.3
-  - 2.3.0
-  - 2.3.1
+before_script:
+  - export LANG=en_US.UTF-8
+install: bundle
+script:
+  - csrutil status
+  - git submodule update --init --recursive
+  - bundle exec rake build_test_dumper spec
