--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: objective-c
-sudo: true
+sudo: false
 matrix:
   include:
-      - os: osx
-        osx_image: xcode8
+    - os: osx
+      osx_image: xcode8
+    - os: osx
+      osx_image: xcode8.1
+    - os: osx
+      osx_image: xcode8.2
 
 before_script:
   - export LANG=en_US.UTF-8
